were fixed: sup panel issue, white space under hero on mobile

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: tourtiger
 Theme URI: http://tourtiger.wpengine.com
 Description: child theme of genesis from git
 Author: tourtiger
-Version: 1.3.0
+Version: 1.3.2
 Template: genesis
 Template Version: 2.0.27
 GitHub Theme URI: https://github.com/matjnewton/tourtiger
@@ -1682,3 +1682,25 @@ iframe {
 .pc--c__padding_none.pc--c__content {
     padding: 0;
 }
+
+/* Fixing Sup Panel Issue */
+@media (max-width: 768px) {
+    .secondary-menu-wrapper {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        z-index: 20;
+    }
+
+    .navbar-header {
+        margin-top: 25px;
+    }
+}
+/* Fixing white space under hero area on mobile Issue */
+@media (max-width: 481px){
+    .banner-wrapper {
+        height: 300px !important;
+    }
+}
+
